# RMVisionStudy

./: CMakeLists.txt  RMCV.pro
src/: CMakeLists.txt  buff_detect.cpp  buff_detect.h  main.cpp
src/videoprocess/: setting.cpp  setting.h  utils.cpp  utils.h  video_process.cpp  video_process.h
